cluster/apps/media/owntone/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owntone
  namespace: media
  labels:
    app: owntone
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: owntone
  template:
    metadata:
      labels:
        app: owntone
    spec:
      containers:
        - name: owntone
          image: docker.io/owntone/owntone:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3689
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 1000m
              memory: 1Gi
            limits:
              cpu: 2000m
              memory: 2Gi
          volumeMounts:
            - name: cache
              mountPath: /var/cache/owntone
            - name: config
              mountPath: /etc/owntone
            - name: media
              mountPath: /media
      hostNetwork: true
      volumes:
        - name: cache
          emptyDir: {}
        - name: config
          persistentVolumeClaim:
            claimName: owntone-config
        - name: media
          persistentVolumeClaim:
            claimName: owntone-media
