cluster/apps/media/owntone/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owntone
  namespace: media
spec:
  selector:
    app: owntone
  ports:
    - name: http
      port: 3689
      protocol: TCP
      targetPort: 3689
