cluster/apps/media/owntone/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: owntone-http
  namespace: media
spec:
  hostnames:
    - owntone.btkostner.network
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: owntone
          port: 3689
